Discussion Section 3 (corrected)

--- a/Notes/Unit3/Unit3.tex
+++ b/Notes/Unit3/Unit3.tex
@@ -418,17 +418,18 @@
 \begin{itemize}
     \item \marginnote{4/27:}There may be a midterm key.
     \item HW3 will be due Monday 5/3/2021 at 5:00 PM; HW4 will be due Monday 5/10/2021 at 12:00 PM (the usual time, no changes).
-    \item Cross coupling mechanism (from lecture 13?):
+    \item Notes on cross coupling:
     \begin{itemize}
-        \item Starts with a ligand substitution (or association/dissociation) to get to something lower coordinate.
-        \item Then there will be an oxidative addition.
-        \item ...
+        \item Mizoroki-Heck cross couplings are characterized by a migratory insertion into an olefin in place of transmetallation.
+        \item In transmetallation, we typically use Grignards, boronic acids (Negishi), tin reagents (Stille), or silylethers.
+        \item $\alpha$ and $\beta$ elimination (commonly hydride) can give competing reactions with the $\beta$-hydrogens especially.
     \end{itemize}
     \item Alkyls (such as ethyl groups) are more electron-rich than aryls (such as phenyl groups).
     \begin{itemize}
         \item Think Homework 2, Problem 12.
     \end{itemize}
-    \item Goes over stuff that will be useful later in the week for HW3.
+    \item Goes over the arrow pushing from a ring-closing and ring-opening metathesis (very similar to Figure \ref{fig:mechanism-enyneMet}).
+    \item Note the use of a Grignard in the basic cross coupling mechanism.
 \end{itemize}
 
 
@@ -621,7 +622,7 @@
             \item We must first activate our palladium catalyst by causing it to lose a ligand, thus becoming lower-coordinate.
             \item Our aryl hydride will now oxidatively add to the activated catalyst.
             \item Next, we have transmetallation (the most complicated step of the cycle). There are two possible paths by which we can introduce our nucleophile into the system and remove an X (to make space for it). First, we can use a hydride of the nucleophile which will do what we want and then form an acid with \ce{X-}; this acid can then be neutralized by the base. Alternatively, we can bond a metal to the nucleophile and simply have the metal swap \ce{Nu-} for \ce{X-} with the palladium center, forming a metal salt as a byproduct.
-            \item The last step is reductive elimination, which yields our product and regenerates our starting material.
+            \item The last step is reductive elimination, which (re)generates our product and starting material.
         \end{itemize}
         \item Homocoupling (see Figure \ref{fig:mechanismCCb}):
         \begin{itemize}
@@ -636,7 +637,7 @@
             \item This time, however, we use an olefin as our electrophile. Note that $\ce{R}=\ce{H},\ce{CN}$, a ketone, etc. Additionally, note that we show in Figure \ref{fig:mechanismCCc} that we dissociate a ligand \ce{L} at this point, but we could also dissociate an \ce{X-} and carry that through. Overall, this step is a ligand substitution.
             \item A 1,2-migration follows. However, different types of migratory insertion can also occur as dictated by sterics.
             \item After this, we do a $\beta$-\ce{H} elimination to kick out our product (note that the product doesn't have to be \emph{trans} but it typically is) and bring us closer to regenerating the catalyst.
-            \item Lastly, we can regenerate our initial catalyst with the reductive elimination of an acid (which will then be neutralized by an added base) as triggered by the addition of a ligand. Alternatively, the base can deprotonate the \ce{L_{n-2}XH} intermediate before pulling off the \ce{X-} group.
+            \item Lastly, we can regenerate our initial catalyst with the reductive elimination of an acid (which will then be neutralized by an added base) as triggered by the addition of a ligand. Alternatively, the base can deprotonate the \ce{L_{n-2}XH} intermediate before pulling off the \ce{X-}.
             \item Note that this reaction must be carried out in basic media.
         \end{itemize}
     \end{itemize}
