--- a/Notes/Unit3/Unit3.tex
+++ b/Notes/Unit3/Unit3.tex
@@ -9,7 +9,7 @@
 
 
 
-\chapter{???}
+\chapter{Intro to Catalysis}
 \section{Lecture 12: Intro to Catalysis}
 \begin{itemize}
     \item \marginnote{4/26:}We're now moving from theoretical chemistry to some applications (namely catalysis) of the theory we've been learning.
