--- a/PSets/psets.tex
+++ b/PSets/psets.tex
@@ -37,6 +37,12 @@
 
 
 
+\section{Intro to Catalysis}
+\subfile{PSet3/pset3.tex}
+\newpage
+
+
+
 \renewcommand{\leftmark}{References}
 \printbibliography[heading=bibintoc]
 
