--- a/main.bib
+++ b/main.bib
@@ -87,3 +87,45 @@
     year = {1998},
     doi = {10.1021/ja980548u}
 }
+
+@article{bib:SchrockYandulov,
+    author = {Dmitry V Yandulov and Richard R Schrock},
+    title = {Catalytic Reduction of Dinitrogen to Ammonia at a Single Molybdenum Center},
+    journal = {Science},
+    volume = {301},
+    number = {5629},
+    pages = {76-78},
+    year = {2003},
+    doi = {10.1126/science.1085326}
+}
+
+@article{bib:CumminsLaplaza,
+    author = {Catalina E Laplaza and Christopher C Cummins},
+    title = {Dinitrogen Clevage by a Three-Coordinate Molybdenum({III}) Complex},
+    journal = {Science},
+    volume = {268},
+    number = {5212},
+    pages = {861-863},
+    year = {1995},
+    doi = {10.1126/science.268.5212.861}
+}
+
+@article{bib:NishibayashiIron,
+    author = {Masahiro Yuki and Hiromasa Tanaka and Kouitsu Sasaki and Yoshihiro Miyake and Kazunari Yoshizawa and Yoshiaki Nishibayashi},
+    title = {Iron-Catalysed Transformation of Molecular Dinitrogen Into Silylamine Under Ambient Conditions},
+    journal = {Nature Communications},
+    volume = {3},
+    number = {1254},
+    year = {2012},
+    doi = {10.1038/ncomms2264}
+}
+
+@article{bib:AndersonPeters,
+    title = {Catalytic Conversion of Nitrogen to Ammonia by an Iron Model Complex},
+    author = {John S Anderson and Jonathan Rittle and Jonas C Peters},
+    journal = {Nature},
+    volume = {501},
+    pages = {84-87},
+    year = {2013},
+    doi = {10.1038/nature12435}
+}
