Prof Office Hours 5

--- a/Notes/Unit4/Unit4.tex
+++ b/Notes/Unit4/Unit4.tex
@@ -188,5 +188,44 @@
 
 
 
+\section{Office Hours (Anderson)}
+\begin{itemize}
+    \item How much strain is needed for ROMP to proceed?
+    \begin{itemize}
+        \item Norbornene is a common one.
+        \item 4 membered rings.
+        \item 7- and 8-membered rings are usually not sufficiently strained.
+        \item Cyclopropene does exist, and it does do ROMP, but it polymerizes so quickly that you can't do much with it.
+        \begin{itemize}
+            \item If it's cold and you throw in a metathesis catalyst, it will probably work.
+            \item Recall that it also participates in Diels-Alder reactions.
+        \end{itemize}
+    \end{itemize}
+    \item ROMP does \emph{not} release ethylene.
+    \begin{itemize}
+        \item Ring strain is the driving force.
+        \item Part (d) is a typo; ethylene gas is the common byproduct of \emph{most} of these reactions. We should still show ROMP as is.
+    \end{itemize}
+    \item How do metal $d$ orbitals enable $2+2$ cycloaddition?
+    \begin{itemize}
+        \item Butadiene plus ethylene requires ethylene to have filled $\pi^*$ orbitals (these have the appropriate symmetry).
+        \begin{itemize}
+            \item Diels-Alder $4+2$ cycloaddition is allowed.
+        \end{itemize}
+        \item The symmetry of the metal orbitals (esp. $d_{z^2}$ and $d_{xy}$) enables $2+2$ cycloaddition.
+    \end{itemize}
+    \item $\eta$ and $\kappa$ bonding?
+    \begin{itemize}
+        \item IUPAC likes $\kappa$ more now, but $\eta$ is historical.
+        \item $\eta$ indicates a continguous $\pi$ system while $\kappa$ simply indicates denticity.
+        \item Figure \ref{fig:CO2-M-bondinga} is $\kappa^2$ as well.
+        \item Bidentate ligands bond in a $\kappa^2$ fashion.
+        \item Numbers on these as well as $\mu$ should exclusively be superscripts.
+        \item A metal bound face-on to a carboxylate would be $\eta^3$, but this is very atypical/nontexistent bonding. Side-on bonding (i.e., to both oxygens) would be $\kappa^2$.
+    \end{itemize}
+\end{itemize}
+
+
+
 
 \end{document}
