--- a/PSets/PSet3/pset3.tex
+++ b/PSets/PSet3/pset3.tex
@@ -138,13 +138,11 @@
                     \chemleft{(}
                         \chemfig{=-[:120]-[:60]--[:-60]-[:-120]=}
                     \chemright{)_n}
-                    \arrow{0}[,0]\+{,,0.6em}
-                    \chemfig{[:45]=}
                 \schemestop
             \end{center}
             Note that although a six-membered ring is pictured, this reaction can proceed with rings containing any number of carbons. Something similar can also happen with alkyne rings.
         \end{proof}
-        \item What byproduct is common to all of these reactions?
+        \item What byproduct is common to many of these reactions?
         \begin{proof}[Answer]
             Ethylene gas.
         \end{proof}
